examples/test/testpolicy2018.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2018
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key38: value1
      key43: value13
      key5: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value37
          key21: value39
      podSelector:
        matchLabels:
          key16: value34
          key48: value0
